<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_telas"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/img_logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/switch_opc"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnEntraIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_acao_acesso"
        android:onClick="abreIMC"
        android:text="@string/calcIMC" />

    <Button
        android:id="@+id/btnEntraMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_acao_acesso"
        android:onClick="abreMedia"
        android:text="@string/calcMedia" />

    <Button
        android:id="@+id/btnEntraTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_acao_acesso"
        android:onClick="abreTemperatura"
        android:text="@string/calcTemp" />

    <Button
        android:id="@+id/btnEntraCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_acao_acesso"
        android:onClick="abreCalculadora"
        android:text="@string/calculator" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_acao_acesso"
        android:onClick="voltar"
        android:text="@string/back" />
</LinearLayout>